<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Refugees Info</string>
    <string name="app_designer">Laurent Pitoiset</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="abc_operations">operations</string>
    <string name="abc_operation_southsudan">South Sudan</string>
    <string name="abc_operation_car">CAR</string>
    <string name="abc_select_operation">Select Operation</string>
    <string name="abc_home_topmenu">Chose the operation:</string>
    <string name="abc_edit_message">edit message</string>
    <string name="abc_button_send">send</string>
    <string name="abc_operation_syria">Syria</string>
    <string name="title_activity_display_message">Mon message</string>
    <string name="action_search">Search</string>
    <string name="title_activity_select_operation">Select Operation</string>
    <string name="title_activity_operation_syria">Syria</string>
    <string name="abc_total_poc">Total Persons of Concern</string>
    <string name="value_total_poc">3249204</string>
    <string name="abc_popstats">Population statistics</string>
    <string name="title_activity_pop_stats">Population Statistics</string>
    <string name="title_section1">Time Series</string>
    <string name="title_section2">Demographics</string>
    <string name="title_section3">Asylum seekers</string>
    <string name="title_activity_dbtest">Population Statistics</string>
    <string name="title_activity_country_details">New country</string>
    <string name="menu_country_details">Countries</string>
    <string name="menu_operations_details">Operations</string>
    <string name="menu_maps">Operational maps</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_country_view">Country View</string>
    <string name="label_ref">Refugees</string>
    <string name="label_asylum">Asylum-seekers</string>
    <string name="label_returned">Returned refugees</string>
    <string name="label_idp">Internally displaced</string>
    <string name="label_returned_idp">Returned IDP</string>
    <string name="label_stateless">Stateless</string>
    <string name="label_others">Others of Concern</string>
    <string name="label_total">Total</string>

</resources>
