<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/refugees"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.refugeesinfo.MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="74dp">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/abc_edit_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/abc_button_send" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0.35"
            android:background="@color/button_material_dark"
            android:onClick="gotoSelectOperation"
            android:text="@string/menu_operations_details"
            android:textColor="#ffffffff" />

    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/button_material_dark"
            android:onClick="gotoDBTest"
            android:text="@string/menu_country_details"
            android:textColor="#ffffffff" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/button_material_dark"
            android:onClick="gotoPopStats"
            android:text="@string/abc_popstats"
            android:textColor="#ffffffff" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:baselineAligned="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/button_material_dark"
            android:onClick="gotoMaps"
            android:text="@string/menu_maps"
            android:textColor="#ffffffff" />
    </TableRow>

</TableLayout>
